--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/codelist-item-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/codelist-item-window.zul
@@ -1,7 +1,7 @@
 <window id="modalWindow"
 	title="Položka" 
 	border="normal" 
-    width="300px"
+    width="375px"
     position="center,center" 
     closable="true">
     
@@ -21,8 +21,8 @@
                 <column align="center" hflex="1"/>
             </columns>
 			<rows style="background: white;" >
-				<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-					<cell sclass="form-grid-cell" >
+				<row>
+					<cell>
 						<vbox hflex="1">
 							<label value="${c:l('txt.ui.common.name')}"/>
 							<textbox id="codeListItemName"
@@ -41,15 +41,17 @@
 						</vbox>
 					</cell>		
 				</row>
-				<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-					<cell sclass="form-grid-cell" >
+				<row>
+					<cell>
 						<vbox hflex="1">
 							<label value="${c:l('txt.ui.common.description')}"/>
 							<textbox id="codeListItemDescription"
 								value="@bind(fx.codeListItem.description)"
 								maxlength="240"
+								multiline="true"
 								sclass="form-input-text"
 								tabindex="2"
+								height="95px"
 								hflex="1" />
 							<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 							</hbox>
