--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-plateb.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-plateb.zul
@@ -153,8 +153,8 @@
 			            		</vbox>
 			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
 			            			<hbox vflex="1" pack="center" align="center">
-			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=paymentList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
-		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
+			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=paymentList)" sclass="toolbar-btn" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
+		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" sclass="toolbar-btn" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
 									</hbox>
 								</vbox>
 							</hbox>
