--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/participant-to-course-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/participant-to-course-window.zul
@@ -1,7 +1,7 @@
 <window id="modalWindow"
 	title="${c:l('txt.ui.common.assignParticipantToCourse')}" 
 	border="normal" 
-    width="780px"
+    width="420px"
     position="center,center" 
     closable="true">
     
@@ -29,13 +29,13 @@
 			pageSize="10"
 			selectedItems="@bind(vm.courseApplicationSelectedList)"
 			emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-			class="listbox"
+			class="listbox-300"
 			visible="@load(vm.courseApplicationListVisible)"
 			multiple="true"
 			checkmark="true" >
 	        
 	        <auxhead>
-	            <auxheader class="header" colspan="5" >
+	            <auxheader class="header" colspan="4" >
 	            	<label value="${c:l('txt.ui.menu.applicationList')}" />
 	            	
 	            	<hlayout sclass="pull-right">
@@ -48,24 +48,13 @@
 	        
 	        <!-- Filter -->
 			<auxhead>
-				<auxheader class="filter">
-				</auxheader>
-				
-				<auxheader class="filter">
+				<auxheader class="filter" colspan="2">
 					<textbox hflex="1"
 						value="@bind(vm.filter.courseParticName)"
 						onChange="@command('filterDomCmd')"
 						onOK="@command('filterDomCmd')" />
 				</auxheader>
-				
 				<auxheader class="filter">
-				</auxheader>
-				
-				<auxheader class="filter">
-					<textbox hflex="1" 
-						value="@bind(vm.filter.courseParticRepresentative)"
-						onChange="@command('filterDomCmd')"
-						onOK="@command('filterDomCmd')" />
 				</auxheader>
 				<auxheader class="filter" >
 					<listbox selectedItem="@bind(vm.filter.inCourse)"
@@ -83,9 +72,8 @@
 			
 	        <listhead>
 	            <listheader width="55px" />
-	            <listheader label="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" sort="auto(courseParticipant.contact.surname)" align="left" hflex="3" />
-	            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="center" hflex="2" />
-	            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)" align="left" hflex="3" />
+	            <listheader label="${c:l('txt.ui.common.participant')}" sort="auto(courseParticipant.contact.surname)" align="left" hflex="3" />
+	            <listheader label="Datum nar." sort="auto(courseParticipant.birthdate)" align="center" hflex="min" />
 	            <listheader label="V kurzu" align="center" width="100px" />
 	        </listhead>
 	         
@@ -94,7 +82,6 @@
 	                <listcell/>
 	                <listcell label="${each.courseParticipant.contact.surname} ${each.courseParticipant.contact.firstname}" />
 	                <listcell label="@load(each.courseParticipant.birthdate) @converter(vm.dateConverter)" />
-	                <listcell label="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" />
 	                <listcell iconSclass="z-icon-check-circle" style="color: #87B87F; font-size: large;" visible="${each.courseParticipant.inCourse()}" tooltiptext="${each.courseParticipant.getInCourseInfo()}" />
 	                <listcell visible="${!each.courseParticipant.inCourse()}" />
 	            </listitem>
