--- a/scb-ui-zk/src/main/webapp/pages/common/template/template.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/template.zul
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c" ?>
 
+<?link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"?>
+<?link rel="icon" type="image/x-icon" href="/favicon.ico"?>
+
 <?xel-method prefix="common" name="getOrgNameStatic"
 	class="com.jzaoralek.scb.ui.common.vm.BaseVM"
 	signature="com.jzaoralek.scb.ui.common.vm.BaseVM getOrgNameStatic()"?>
-     
+
 <zk>
 	<borderlayout sclass="scb-bl-main" apply="com.jzaoralek.scb.ui.common.template.TemplateComposer">
 		<north border="none" >
