--- a/scb-ui-zk/src/main/webapp/pages/common/login.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/login.zul
@@ -3,6 +3,9 @@
 <?page title="${c:l('txt.Login')}"?>
 <?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c" ?>
 
+<?link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"?>
+<?link rel="icon" type="image/x-icon" href="/favicon.ico"?>
+
 <zk>
 	<script src="/resources/js/scb-login.js"></script>
 	
