--- a/scb-ui-zk/src/main/webapp/pages/public/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/prihlaska-do-klubu.zul
@@ -1,3 +1,6 @@
+<?link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"?>
+<?link rel="icon" type="image/x-icon" href="/favicon.ico"?>
+
 <zk>
 	<include src="/pages/shared/prihlaska-do-klubu.zul" />
 </zk>
