--- a/scb-ui-zk/src/main/webapp/pages/public/zapomenute-heslo.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/zapomenute-heslo.zul
@@ -4,6 +4,9 @@
 <?init class="org.zkoss.zk.ui.util.Composition" arg0="/pages/common/template/template.zul"?>
 <?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c" ?>
 
+<?link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"?>
+<?link rel="icon" type="image/x-icon" href="/favicon.ico"?>
+
 <zk>
 
 	<div self="@{define(mainContent)}" 
