--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
@@ -4,6 +4,9 @@
 <?component name="validMsg" macroURI="/pages/common/component/validMsg.zul"?>
 <?component name="lesson-stats" macroURI="/pages/common/component/lesson-stats.zul"?>
 
+<?link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"?>
+<?link rel="icon" type="image/x-icon" href="/favicon.ico"?>
+
 <zk>
 	<div self="@{define(mainContent)}" 
 		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseParticipantVM')"
