--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
@@ -3,6 +3,9 @@
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
 <?component name="validMsg" macroURI="/pages/common/component/validMsg.zul"?>
 
+<?link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"?>
+<?link rel="icon" type="image/x-icon" href="/favicon.ico"?>
+
 <zk>
 	<div self="@{define(mainContent)}" 
 			hflex="1" 
