--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/uzivatel.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/uzivatel.zul
@@ -5,6 +5,9 @@
 
 <?component name="validMsg" macroURI="/pages/common/component/validMsg.zul"?>
 
+<?link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"?>
+<?link rel="icon" type="image/x-icon" href="/favicon.ico"?>
+
 <zk>
 	<div self="@{define(mainContent)}" 
 			hflex="1" 
