--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
@@ -28,7 +28,7 @@
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
 			        <auxhead>
-			            <auxheader class="header" colspan="5" >
+			            <auxheader class="header" colspan="3" >
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox vflex="1" align="center">
@@ -46,27 +46,44 @@
 					
 			        <listhead>
 			            <listheader label="${c:l('txt.ui.common.firstname')}" sort="auto(contact.surname)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(birthdate)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.birthNumber')}" sort="auto(personalNo)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.healthInsurance')}" sort="auto(healthInsurance)" align="left" />
-			            <listheader width="270px" align="right" />
+			            <listheader label="Datum nar." sort="auto(birthdate)" align="left" hflex="min" />
+			            <listheader align="left" width="310px" />
 			        </listhead>
 			         
 			        <template name="model">
 			            <listitem>
 			                <listcell label="${each.contact.completeName}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="@load(each.birthdate) @converter(vm.dateConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.personalNo}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.healthInsurance}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+			                <listcell label="@load(each.birthdate) @converter(vm.dateConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />	                
 			                <listcell>
-			                	<button label="@load(vm.newCourseApplicationButtonText)" 
-			                		tooltiptext="@load(vm.newCourseApplicationButtonTooltipText)"
-									sclass="btn-warning" iconSclass="z-icon-file-text"
-									onClick="@command('createNewCourseApplicationCmd', uuid=each.uuid)"
-									visible="@load(vm.newCourseApplicationAllowed(each))" />
-			                	<button tooltiptext="${c:l('txt.ui.common.detail')}"
-			                		iconSclass="z-icon-pencil" 
-			                		onClick="@command('detailCmd', uuid=each.uuid)" />
+			                	<hlayout>
+				                	<!-- Prihlasit na konkretni kurz -->
+				                	<button label="@load(vm.newCourseApplicationButtonText)" 
+				                		tooltiptext="@load(vm.newCourseApplicationButtonTooltipText)"
+										sclass="btn-warning" iconSclass="z-icon-file-text"
+										popup="${each.uuid}_newCourseLoginPopup, position=after_end"
+										visible="@load(vm.newCourseApplicationAllowed(each))"
+										if="${vm.courseSelectionRequired}" />
+									<!-- Prihlasit na dalsi rocnik bez vyberu kurzu -->
+									<button label="@load(vm.newCourseApplicationButtonText)" 
+				                		tooltiptext="@load(vm.newCourseApplicationButtonTooltipText)"
+										sclass="btn-warning" iconSclass="z-icon-file-text"
+										onClick="@command('createNewCourseApplicationCmd', uuid=each.uuid)"
+										visible="@load(vm.newCourseApplicationAllowed(each))"
+										if="${!vm.courseSelectionRequired}" />
+				                	<button tooltiptext="${c:l('txt.ui.common.detail')}"
+				                		label="Detail" 
+				                		hflex="min"
+				                		style="margin-left: 2px;"
+				                		onClick="@command('detailCmd', uuid=each.uuid)" />
+				                	<popup id="${each.uuid}_newCourseLoginPopup">
+										<!-- Ucastnik -->
+										<include src="/pages/common/component/course-selection-grid.zul" />
+										
+										<hbox style="margin-bottom: 5px;margin-left: 10px;" hflex="1" pack="center" >
+											<button label="Odeslat" onClick="@command('logToCourseCmd', courseParticipant=each, popup=newParticipantPopup)" iconSclass="z-icon-check" />
+										</hbox>
+									</popup>		                	
+			                	</hlayout>
 			                </listcell>
 			            </listitem>
 			        </template>
