--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
@@ -167,9 +167,9 @@
 										mold="paging"
 										pageSize="10"
 										emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-										class="listbox" >
+										class="listbox-400" >
 								        <auxhead>
-								            <auxheader class="header" colspan="3" >
+								            <auxheader colspan="3" >
 								            	<hbox hflex="1" height="42px" align="center" >
 									            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 								            			<hbox>
@@ -183,8 +183,8 @@
 								        </auxhead>
 								        
 								        <listhead >
-								            <listheader label="${c:l('txt.ui.common.year')}" sort="auto(courseParticipant.contact.surname)" align="left" />
-								            <listheader label="${c:l('txt.ui.common.createdAt')}" sort="auto(modifAt)" align="left" />
+								            <listheader label="${c:l('txt.ui.common.year')}" sort="auto(courseParticipant.contact.surname)" hflex="min" align="left" />
+								            <listheader label="${c:l('txt.ui.common.createdAt')}" sort="auto(modifAt)" align="center" />
 								            <listheader width="90px" align="center" />
 								        </listhead>
 								         
