--- a/scb-ui-zk/src/main/webapp/pages/common/component/course-selection-grid.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/course-selection-grid.zul
@@ -1,15 +1,13 @@
 <zk>
-	<grid width="550px" sclass="form-grid" style="border: none;" if="${vm.courseSelectionRequired}" >
+	<grid width="550px" style="border: none;" if="${vm.courseSelectionRequired}" >
 		<columns>
-               <column align="left" hflex="1" />
-           </columns>
-           
-		<rows style="background: white;" >
-			<row sclass="form-grid-row" 
-				style="border: none; padding: 10px 20px 20px 20px;">
-				<cell sclass="form-grid-cell" >
+			<column align="left" hflex="1" />
+        </columns>
+		<rows style="background: white;" hflex="1" >
+			<row hflex="1">
+				<cell hflex="1">
 					<vbox hflex="1">
-						<label value="${c:l('txt.ui.common.SelectCourseLocation')}"/>
+						<label value="${c:l('txt.ui.common.SelectCourseLocation')}" />
 						<!-- Vyber mista konani kurzu -->
 						<combobox model="@init(vm.courseLocationList)"
 							onSelect="@command('courseLocationSelectCmd')"
@@ -26,17 +24,15 @@
 					</vbox>
 				</cell>
 			</row>
-			<row sclass="form-grid-row" 
-				style="border: none; padding: 0px 20px 20px 20px;"
-				visible="@load(vm.courseList ne null and vm.courseList.isEmpty())" >
+			<row visible="@load(vm.courseList ne null and vm.courseList.isEmpty())" >
 				<!-- Nenalezen zadky kurz -->
 				<cell sclass="form-grid-cell" >
 					<label value="${c:l('txt.ui.common.NoCourseFoundForLocation')}"/>
 				</cell>
 			</row>		
-			<row sclass="form-grid-row" visible="@load(!empty(vm.courseList))" style="border: none; padding: 0px 20px 20px 20px;" >
+			<row visible="@load(!empty(vm.courseList))" >
 				<!-- Vyber kurzu -->
-				<cell sclass="form-grid-cell">
+				<cell>
 					<vbox hflex="1">
 						<label value="${c:l('txt.ui.common.SelectCourse')}"/>	
 						<listbox model="@load(vm.courseList)" 
@@ -49,11 +45,11 @@
 							checkmark="true" >
 							
 					        <listhead>
-					            <listheader width="25px"  valign="top" />
+					            <listheader width="55px"  valign="top" />
 					            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="3" valign="top"/>
 					            <listheader label="${c:l('txt.ui.common.lessons')}" align="left" hflex="2" valign="top" />
 					            <listheader label="${c:l('txt.ui.common.Occupancy')}" align="center" hflex="min" valign="top" />
-					            <listheader width="50px" align="center" valign="top" />
+					            <listheader width="70px" align="center" valign="top" />
 					        </listhead>
 					         
 					        <template name="model" var="item" >
@@ -69,7 +65,10 @@
 					                <listcell>
 						                <vbox>
 											<!-- Popis -->
-						                	<a iconSclass="z-icon-info-circle" popup="descriptionPopup_${item.uuid}, position=after_end" style="font-size: large;" tooltiptext="${c:l('txt.ui.common.description2')}" />
+						                	<a iconSclass="z-icon-info-circle big-icon" 
+						                		popup="descriptionPopup_${item.uuid}, position=after_end" 
+						                		style="font-size: large;" 
+						                		tooltiptext="${c:l('txt.ui.common.description2')}" />
 						                	<popup id="descriptionPopup_${item.uuid}">
 						                		<course-description course="${item}" />
 										    </popup>
