--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
@@ -25,184 +25,14 @@
 					<!-- Formular -->
 						<tabbox id="tb" hflex="1"  >
 						    <tabs id="tabs">
-						        <tab id="courseParticipant" label="${c:l('txt.ui.common.dataBasic')}" />
-						        <tab id="courseApplications" label="${c:l('txt.ui.menu.applications')}" />
 						        <tab id="courses" label="${c:l('txt.ui.menu.courses')}" />
+						        <tab id="courseApplications" label="${c:l('txt.ui.menu.applications')}" />
+						        <tab id="courseParticipant" label="${c:l('txt.ui.common.dataBasic')}" />
 						        <tab id="courseParticipantResult" visible="false" label="${c:l('txt.ui.common.results')}" />
 						    </tabs>
 						    <tabpanels>
-						    	<tabpanel sclass="tab-no-padding">
-						    		<!-- Ucastnik -->
-									<grid>
-										<columns>
-							                <column align="center" hflex="1" />
-							            </columns>
-										<rows style="background: white;" >
-											<row>
-												<cell>
-													<vbox hflex="1">
-														<label value="${c:l('txt.ui.common.firstname')}"/>
-														<textbox id="particFirstname" 
-															maxlength="@load(vm.getFirstnameMaxlength())"
-															value="@bind(fx.courseParticipant.contact.firstname) @validator(vm.notNullValidator)"
-															placeholder="*"
-															sclass="form-input-text"
-															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-															tabindex="1"
-															hflex="1" />
-														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-															<span sclass="alert alert-danger" visible="@load(not empty vmsgs[particFirstname])" >
-																<label value="@bind(vmsgs[particFirstname])" />
-															</span>
-														</hbox>
-													</vbox>
-												</cell>
-											</row>
-											<row>
-												<cell>
-													<vbox hflex="1">
-														<label value="${c:l('txt.ui.common.surname')}"/>
-														<textbox id="particSurname"
-															value="@bind(fx.courseParticipant.contact.surname) @validator(vm.notNullValidator)"
-															maxlength="@load(vm.getSurnameMaxlength())"
-															placeholder="*"
-															sclass="form-input-text"
-															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-															tabindex="2"
-															hflex="1" />
-														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particSurname])" >
-																<label value="@bind(vmsgs[particSurname])" />
-															</span>
-														</hbox>
-													</vbox>
-												</cell>
-											</row>
-											<row>
-												<cell>
-													<vbox hflex="1">
-														<label value="${c:l('txt.ui.common.birthDate')}"/>
-														<datebox id="particBirthdate"
-															value="@bind(fx.courseParticipant.birthdate) @validator(vm.notNullObjectValidator)"
-						                            		format="@load(vm.dateFormat)" 
-						                            		maxlength="@load(vm.getDateMaxlength())"
-						                            		placeholder="*"
-						                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-						                            		tabindex="3" />
-														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
-																	<label value="@bind(vmsgs[particBirthdate])" />
-																</span>
-														</hbox>
-													</vbox>
-												</cell>
-											</row>
-											<row visible="@load(vm.isLoggedUserInRole('ADMIN'))" >
-												<cell>
-													<vbox hflex="1">
-														<label value="${c:l('txt.ui.common.birthNumber')}"/>
-														<textbox id="particBirthNumber"
-															value="@bind(fx.courseParticipant.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
-						                            		maxlength="@load(vm.getBirthNumberMaxlength())"
-						                            		placeholder="*"
-						                            		sclass="form-input-text"
-						                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-						                            		tabindex="4"
-						                            		hflex="1" />
-														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
-																<label value="@bind(vmsgs[particBirthNumber])" />
-															</span>
-														</hbox>
-													</vbox>
-												</cell>
-											</row>
-											<row>
-												<cell >
-													<vbox hflex="1">
-														<label value="${c:l('txt.ui.common.healthInsurance')}"/>
-														<textbox id="particHealthInsurance"
-															value="@bind(fx.courseParticipant.healthInsurance) @validator(vm.notNullValidator)"
-															maxlength="@load(vm.getHealthInsuranceMaxlength())"
-															placeholder="*"
-															sclass="form-input-text"
-															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-															tabindex="5"
-															hflex="1" />
-														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particHealthInsurance])" >
-																<label value="@bind(vmsgs[particHealthInsurance])" />
-															</span>
-														</hbox>
-													</vbox>
-												</cell>
-											</row>
-											<row>
-												<cell>
-													<vbox hflex="1">
-														<label value="${c:l('txt.ui.application.healthInfo')}"/>
-														<textbox rows="3" hflex="3" multiline="true"
-															value="@bind(fx.courseParticipant.healthInfo)" tabindex="6"
-															sclass="form-input-textarea"
-															maxlength="@load(vm.getHealthInfoMaxlength())" />
-													</vbox>
-												</cell>
-											</row>
-										</rows>
-									</grid>
-									
-									<hbox style="margin: 5px 10px 15px 20px;">
-										<button label="Uložit"
-												onClick="@command('submit')" 
-												iconSclass="z-icon-check" 
-												sclass="btn-success"/>
-									</hbox>
-						    	</tabpanel>
-						    	
-						    	<tabpanel fulfill="courseApplications.onSelect">
-						    		<!-- Prihlasky --> 		
-						    		<listbox model="@load(vm.courseApplicationList)"
-										id="courseApplicationList"
-										hflex="1"
-										mold="paging"
-										pageSize="10"
-										emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-										class="listbox-400" >
-								        <auxhead>
-								            <auxheader colspan="3" >
-								            	<hbox hflex="1" height="42px" align="center" >
-									            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-								            			<hbox>
-									            			<vbox>
-									            				<label value="${c:l('txt.ui.menu.applications')}" />
-															</vbox>
-								            			</hbox>
-								            		</vbox>
-												</hbox>
-								            </auxheader>
-								        </auxhead>
-								        
-								        <listhead >
-								            <listheader label="${c:l('txt.ui.common.year')}" sort="auto(courseParticipant.contact.surname)" hflex="min" align="left" />
-								            <listheader label="${c:l('txt.ui.common.createdAt')}" sort="auto(modifAt)" align="center" />
-								            <listheader width="90px" align="center" />
-								        </listhead>
-								         
-								        <template name="model">
-								            <listitem>
-								                <listcell label="${each.yearFrom} - ${each.yearTo}" />
-								                <listcell label="@load(each.modifAt) @converter(vm.dateTimeConverter)" />			                	
-								                <listcell>
-								                	<button iconSclass="z-icon-download" hflex="min" width="20px" onClick="@command('downloadCourseApplicationCmd', courseApplication=each)"  />
-								                </listcell>
-								            </listitem>
-								        </template>
-								    </listbox>
-						    	</tabpanel>
-						    	
-						    	<tabpanel hflex="1" fulfill="courses.onSelect" vflex="1">
+						    	<tabpanel hflex="1" vflex="1">
 						    		<vbox vflex="1" align="start">
-						    		
 							    		<!-- Kurzy -->
 							    		<listbox model="@load(vm.courseList)"
 											id="courseList"
@@ -338,6 +168,175 @@
 											</template>
 										</grid>
 								    </vbox>
+						    	</tabpanel>
+						    	
+						    	<tabpanel fulfill="courseApplications.onSelect">
+						    		<!-- Prihlasky --> 		
+						    		<listbox model="@load(vm.courseApplicationList)"
+										id="courseApplicationList"
+										hflex="1"
+										mold="paging"
+										pageSize="10"
+										emptyMessage="${c:l('txt.ui.common.noDataFound')}"
+										class="listbox-400" >
+								        <auxhead>
+								            <auxheader colspan="3" >
+								            	<hbox hflex="1" height="42px" align="center" >
+									            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+								            			<hbox>
+									            			<vbox>
+									            				<label value="${c:l('txt.ui.menu.applications')}" />
+															</vbox>
+								            			</hbox>
+								            		</vbox>
+												</hbox>
+								            </auxheader>
+								        </auxhead>
+								        
+								        <listhead >
+								            <listheader label="${c:l('txt.ui.common.year')}" sort="auto(courseParticipant.contact.surname)" hflex="min" align="left" />
+								            <listheader label="${c:l('txt.ui.common.createdAt')}" sort="auto(modifAt)" align="center" />
+								            <listheader width="90px" align="center" />
+								        </listhead>
+								         
+								        <template name="model">
+								            <listitem>
+								                <listcell label="${each.yearFrom} - ${each.yearTo}" />
+								                <listcell label="@load(each.modifAt) @converter(vm.dateTimeConverter)" />			                	
+								                <listcell>
+								                	<button iconSclass="z-icon-download" hflex="min" width="20px" onClick="@command('downloadCourseApplicationCmd', courseApplication=each)"  />
+								                </listcell>
+								            </listitem>
+								        </template>
+								    </listbox>
+						    	</tabpanel>
+						    	
+						    	<tabpanel fulfill="courseParticipant.onSelect" sclass="tab-no-padding">
+						    		<!-- Ucastnik -->
+									<grid>
+										<columns>
+							                <column align="center" hflex="1" />
+							            </columns>
+										<rows style="background: white;" >
+											<row>
+												<cell>
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.firstname')}"/>
+														<textbox id="particFirstname" 
+															maxlength="@load(vm.getFirstnameMaxlength())"
+															value="@bind(fx.courseParticipant.contact.firstname) @validator(vm.notNullValidator)"
+															placeholder="*"
+															sclass="form-input-text"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="1"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" visible="@load(not empty vmsgs[particFirstname])" >
+																<label value="@bind(vmsgs[particFirstname])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											<row>
+												<cell>
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.surname')}"/>
+														<textbox id="particSurname"
+															value="@bind(fx.courseParticipant.contact.surname) @validator(vm.notNullValidator)"
+															maxlength="@load(vm.getSurnameMaxlength())"
+															placeholder="*"
+															sclass="form-input-text"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="2"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particSurname])" >
+																<label value="@bind(vmsgs[particSurname])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											<row>
+												<cell>
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.birthDate')}"/>
+														<datebox id="particBirthdate"
+															value="@bind(fx.courseParticipant.birthdate) @validator(vm.notNullObjectValidator)"
+						                            		format="@load(vm.dateFormat)" 
+						                            		maxlength="@load(vm.getDateMaxlength())"
+						                            		placeholder="*"
+						                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+						                            		tabindex="3" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
+																	<label value="@bind(vmsgs[particBirthdate])" />
+																</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											<row visible="@load(vm.isLoggedUserInRole('ADMIN'))" >
+												<cell>
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.birthNumber')}"/>
+														<textbox id="particBirthNumber"
+															value="@bind(fx.courseParticipant.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
+						                            		maxlength="@load(vm.getBirthNumberMaxlength())"
+						                            		placeholder="*"
+						                            		sclass="form-input-text"
+						                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+						                            		tabindex="4"
+						                            		hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
+																<label value="@bind(vmsgs[particBirthNumber])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											<row>
+												<cell >
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.healthInsurance')}"/>
+														<textbox id="particHealthInsurance"
+															value="@bind(fx.courseParticipant.healthInsurance) @validator(vm.notNullValidator)"
+															maxlength="@load(vm.getHealthInsuranceMaxlength())"
+															placeholder="*"
+															sclass="form-input-text"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="5"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particHealthInsurance])" >
+																<label value="@bind(vmsgs[particHealthInsurance])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											<row>
+												<cell>
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.application.healthInfo')}"/>
+														<textbox rows="3" hflex="3" multiline="true"
+															value="@bind(fx.courseParticipant.healthInfo)" tabindex="6"
+															sclass="form-input-textarea"
+															maxlength="@load(vm.getHealthInfoMaxlength())" />
+													</vbox>
+												</cell>
+											</row>
+										</rows>
+									</grid>
+									
+									<hbox style="margin: 5px 10px 15px 20px;">
+										<button label="Uložit"
+												onClick="@command('submit')" 
+												iconSclass="z-icon-check" 
+												sclass="btn-success"/>
+									</hbox>
 						    	</tabpanel>
 						    	
 						    	<tabpanel hflex="1" if="false" fulfill="courseParticipantResult.onSelect">
