--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -40,6 +40,24 @@
 			            					visible="@load(vm.isLoggedUserInRole('ADMIN'))" />
 			            			</hbox>
 			            		</vbox>
+			            		
+			            		<hbox sclass="header-div" if="${vm.showCourseFilter}" align="center" hflex="1" >
+<!-- 									<label value="${c:l('txt.ui.common.courseLocation2')}:"/> -->
+									Místo:
+									<listbox id="courseLocation" 
+										selectedItem="@bind(vm.courseLocationSelected)" 
+										model="@load(vm.courseLocationList)"
+										onSelect="@command('filterByCourseLocationCmd')"
+										mold="select"
+										style="margin-left: 5px;"
+										height="30px"
+										width="150px" >
+										<template name="model">
+								       		<listitem label="${each.name}" value="${each}" />
+										</template>
+									</listbox>
+								</hbox>
+			            		
 			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
 			            			<hbox vflex="1" pack="center" align="center">
 			            				<!-- Rocnik -->
