--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
@@ -104,7 +104,7 @@
 					
 			        <listhead>
 			            <listheader label="${c:l('txt.ui.common.firstname')}" sort="auto(courseParticipant.contact.surname)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.course')}" sort="auto(courseParticipant.inCourseInfo)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.course')}" sort="auto(courseParticipant.courseName)" align="left" />
 			            <listheader label="${c:l('txt.ui.common.paymentInstructionSent')}" align="center" hflex="min" />
 			            <listheader label="${c:l('txt.ui.common.paymentState')}" align="center" hflex="min" />
 			            <listheader width="90px" align="center" />
