coure list, change width of column with action button

--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -89,7 +89,7 @@
 		            	sort="auto(participantListCount)" 
 		            	align="center" 
 		            	hflex="min"  />
-		            <listheader hflex="min" align="center" />
+		            <listheader width="115px" align="center" />
 		        </listhead>
 		         
 		        <template name="model">
